unpackaged/main/default/objects/Product_Conversation__c/Product_Conversation__c.object-meta.xml
<CustomObject>
    <label>Product Conversation</label>
    <nameField>
        <label>Product Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Conversations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>