unpackaged/main/default/objects/Product_Conversation__c/fields/Account_Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Success_Tier__c</fullName>
    <label>Account Customer Success Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Success_Tiers</valueSetName>
    </valueSet>
</CustomField>