unpackaged/main/default/objects/Product_Conversation__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>