unpackaged/main/default/objects/Product_Conversation__c/fields/AI_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Status__c</fullName>
    <label>AI Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>