unpackaged/main/default/objects/Product_Conversation__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <label>Answer 1</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>