unpackaged/main/default/objects/Product_Conversation__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <label>Answer 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>