unpackaged/main/default/objects/Product_Conversation__c/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <label>Answer 3</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>