unpackaged/main/default/objects/Product_Conversation__c/fields/Deal_Forecast_ARR__c.field-meta.xml
<CustomField>
    <fullName>Deal_Forecast_ARR__c</fullName>
    <label>Deal Forecast ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>