unpackaged/main/default/objects/Product_Conversation__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>