unpackaged/main/default/objects/Product_Conversation__c/fields/Gong_Call__c.field-meta.xml
<CustomField>
    <fullName>Gong_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gong Call</label>
    <referenceTo>Gong__Gong_Call__c</referenceTo>
    <relationshipLabel>Product Conversations</relationshipLabel>
    <relationshipName>Product_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>