unpackaged/main/default/objects/Product_Conversation__c/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Conversations</relationshipLabel>
    <relationshipName>Product_Pitches</relationshipName>
    <type>Lookup</type>
</CustomField>