unpackaged/main/default/objects/Product_Conversation__c/fields/Key_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Email__c</fullName>
    <label>Key Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>