unpackaged/main/default/objects/Product_Conversation__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>DATE(YEAR(Date__c),MONTH(Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Date</type>
</CustomField>