unpackaged/main/default/objects/Product_Conversation__c/fields/Notification_MQ__c.field-meta.xml
<CustomField>
    <fullName>Notification_MQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification MQ</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Product Conversations</relationshipLabel>
    <relationshipName>Product_Pitches</relationshipName>
    <type>Lookup</type>
</CustomField>