unpackaged/main/default/objects/Product_Conversation__c/fields/Owner_Role_Rule__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Role Rule</label>
    <referenceTo>ROE_Rule__c</referenceTo>
    <relationshipName>Product_Pitches</relationshipName>
    <type>Lookup</type>
</CustomField>