unpackaged/main/default/objects/Product_Conversation__c/fields/Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment__c</fullName>
    <label>Owner Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>