unpackaged/main/default/objects/Product_Conversation__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT(Product__c)&amp;&quot; (&quot;&amp;TEXT(Type__c)&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product and Type</label>
    <type>Text</type>
</CustomField>