unpackaged/main/default/objects/Product_Conversation__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <label>Question 3</label>
    <type>TextArea</type>
</CustomField>