unpackaged/main/default/objects/Product_Conversation__c/fields/Question_4__c.field-meta.xml
<CustomField>
    <fullName>Question_4__c</fullName>
    <label>Question 4</label>
    <type>TextArea</type>
</CustomField>