unpackaged/main/default/objects/Product_Conversation__c/fields/Sentiment_Details__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Details__c</fullName>
    <label>Sentiment Details</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>